# doorway

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: lint.yml  python-publish.yml  python-test.yml  version-bump.yaml
doorway/: __init__.py  _atomic.py  _colors.py  _ctx.py  _env_vars.py  _fmt.py  _hash.py  _inout.py  _modify_path.py  _shard.py  _stale.py  _uri.py  _utils.py  _utils_uri.py
doorway/_dev/: __init__.py
doorway/_old/: _atomic.py  _hash.py  _stale.py  _utils_io.py  _utils_path.py
doorway/x/: __init__.py  _atomic.py  _inout.py  _modify_path.py  _proxy.py  _uri.py
tests/: test.py  test_asdf.py  test_fmt.py  test_hash.py  test_uri.py  test_uri_utils.py  util.py
